--- a/theme/default/index.html
+++ b/theme/default/index.html
@@ -22,6 +22,8 @@
       
     <script src="theme/default/Highcharts/js/highcharts.js"></script>
     <script src="theme/default/Highcharts/js/highcharts-more.js"></script>
+    <script src="theme/default/Highcharts/js/modules/exporting.js"></script>
+    <script src="theme/default/Highcharts/js/modules/offline-exporting.js"></script>
     
     <script src="theme/default/Highcharts/js/modules/solid-gauge.js"></script>
     <script src="theme/default/Highcharts/js/modules/heatmap.js"></script>
@@ -97,11 +99,9 @@
             type: 'solidgauge'
         },
 
-        title: null,
-
         pane: {
             center: ['50%', '85%'],
-            size: '120%',
+            size: '150%',
             startAngle: -90,
             endAngle: 90,
             background: {
@@ -125,8 +125,8 @@
             ],
             lineWidth: 0,
             minorTickInterval: null,
-            tickPixelInterval: 400,
-            tickWidth: 0,
+            tickPixelInterval: 64,
+            tickWidth: 1,
             title: {
                 y: -100
             },
@@ -151,12 +151,15 @@
         yAxis: {
             min: 0,
             max: 4096,
-            title: {
-                text: 'Objects'
-            }
         },
         credits: {
             enabled: false
+        },
+        title: {
+            text: 'Objects'
+        },
+        subtitle: {
+            text: 'don\'t include vehicle spawned. Maximum supported is 4096 object'
         },
 
         series: [{
@@ -165,7 +168,7 @@
             dataLabels: {
                 format: '<div style="text-align:center"><span style="font-size:25px;color:' +
                     ((Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black') + '">{y}</span><br/>' +
-                       '<span style="font-size:12px;color:silver">don\'t include vehicle spawned</span></div>'
+                       '<span style="font-size:12px;color:silver"></span></div>'
             },
             tooltip: {
                 //valueSuffix: ''
@@ -178,19 +181,21 @@
     $('#gauge_mat').highcharts(Highcharts.merge(gaugeOptions, {
         yAxis: {
             min: 0,
-            max: 10000,
-            title: {
-                text: 'Materials'
-            }
+            max: 8192,
         },
-
+        title: {
+            text: 'Materials'
+        },
+        subtitle: {
+            text: 'Don\'t included BeamNG materials'
+        },
         series: [{
             name: 'Materials',
             data: [%mat_count%],
             dataLabels: {
                 format: '<div style="text-align:center"><span style="font-size:25px;color:' +
                     ((Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black') + '">{y:.1f}</span><br/>' +
-                       '<span style="font-size:12px;color:silver">Don\'t included BeamNG materials</span></div>'
+                       '<span style="font-size:12px;color:silver"></span></div>'
             },
             tooltip: {
                 //valueSuffix: ' revolutions/min'
@@ -216,6 +221,7 @@
                 },
                 borderWidth: 3
             }],
+            turboThreshold : 0,
             data: points
         }],
         subtitle: {
