added icon to gui fixed icon on readme

--- a/theme/default/index.html
+++ b/theme/default/index.html
@@ -58,7 +58,7 @@ function  show(element,toshow){
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><span><img alt="Logo" src="image/icon_32.PNG">BeamNG map Report : %map_name%</span></a>
+          <a class="navbar-brand" href="#"><span><img alt="Logo" src="image/icon_32.png">BeamNG map Report : %map_name%</span></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
